syntax = "proto3";

package pools;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/pools/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateBaseDiskRequest {
    string SrcImageId = 1;
    types.Disk SrcDisk = 5;
    string SrcDiskCheckpointId = 6;
    types.Disk BaseDisk = 2;
    string BaseDiskCheckpointId = 3;
    uint64 BaseDiskSize = 4;
    bool UseDataplaneTasksForLegacySnapshots = 7;
}

message CreateBaseDiskTaskState {
    CreateBaseDiskRequest Request = 1;
    uint32 Step = 2;
}
